# hafen

./: .env.example  .gitignore  COMPLETION_SUMMARY.md  COST_CALCULATOR_INTEGRATION.md  DEPLOYMENT.md  DOCKER_QUICKSTART.md  FRONTEND_TESTING.md  Makefile  PHASE1_CHECKLIST.md  PHASE2_CHECKLIST.md  PHASE_3_3_COMPLETION_SUMMARY.md  PHASE_3_3_SUMMARY.md  QUICKSTART.md  README.md  SEMANTIC_ERROR_DETECTION.md  SETUP.md  docker-compose.yml  setup_db.sh  start-docker.sh
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  fly.toml  pyproject.toml  requirements-dev.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 000_baseline.py  001_add_auth_and_saas_models.py  009_encrypt_sensitive_columns.py  011_migration_schedules.py  016_troubleshoot_and_corpus.py
apps/api/migrations/: init.sql
apps/api/scripts/: generate_grammar.py  sign_license.py
apps/api/src/: config.py  db.py  main.py  models.py  worker.py
apps/api/src/ai/: __init__.py  client.py
apps/api/src/ai/eval/: cli.py
apps/api/src/ai/prompts/: __init__.py  app_impact.py  runbook.py
apps/api/src/ai/services/: __init__.py  app_impact.py  runbook.py
apps/api/src/analyze/: __init__.py  app_impact.py  complexity.py  sql_extractor.py
apps/api/src/analyzers/: benchmark_analyzer.py  complexity_scorer.py  semantic_analyzer.py
apps/api/src/api/: __init__.py
apps/api/src/api/routes/: __init__.py  app_impact.py  runbook.py  usage.py
apps/api/src/connectors/: connection_manager.py  connection_pool.py  oracle_connector.py  postgres_connector.py
apps/api/src/converters/: oracle_functions.py
apps/api/src/core/: __init__.py
apps/api/src/core/diagnostics/: __init__.py  diagnostic.py
apps/api/src/core/ir/: __init__.py  nodes.py
apps/api/src/core/pipeline/: __init__.py
apps/api/src/cost_calculator/: calculator.py
apps/api/src/infra/: __init__.py
apps/api/src/license/: __init__.py  verifier.py
apps/api/src/llm/: client.py
apps/api/src/migrate/: __init__.py  __main__.py  checkpoint.py  checkpoint_adapter.py  copy.py  introspect.py  keyset.py  planner.py  runner.py  sequences.py  verify.py
apps/api/src/migration/: __init__.py  checkpoint.py  claude_planner.py  orchestrator.py  validators.py
apps/api/src/parsers/: plsql_parser.py
apps/api/src/projects/: __init__.py  pdf.py  runbook.py
apps/api/src/rag/: __init__.py  case_store.py  embeddings.py
apps/api/src/reports/: __init__.py  pdf_generator.py
apps/api/src/routers/: account.py  assess.py  auth.py  billing.py  cdc.py  cloud_analyze.py  convert.py  schedules.py  settings.py  setup.py  sso.py  troubleshoot.py  webhooks.py
apps/api/src/services/: anonymizer.py  audit.py  billing.py  crypto.py  email.py  scheduler_service.py  troubleshoot_service.py  webhook_service.py
apps/api/src/services/cdc/: apply_worker.py
apps/api/src/source/: __init__.py  base.py
apps/api/src/source/oracle/: __init__.py  _lexer.py  _visitor.py  parser.py
apps/api/src/transforms/: __init__.py
apps/api/src/utils/: responses.py  validation.py
apps/api/src/validators/: plpgsql_validator.py
apps/api/tests/: conftest.py  test_ai_client.py  test_ai_eval.py  test_anonymizer.py  test_app_impact.py  test_app_impact_ai.py  test_app_impact_api.py  test_audit.py  test_auth_flow.py  test_benchmark_analyzer.py  test_cdc_apply_worker.py  test_cdc_router.py  test_checkpoint_recovery.py  test_complexity.py  test_connection_pool.py  test_crypto.py  test_hitl_endpoints.py  test_ir.py  test_lexer.py  test_license.py  test_license_endpoint.py  test_masking_router.py  test_migrate_checkpoint_adapter.py  test_migrate_cli.py  test_migrate_copy.py  test_migrate_introspect.py  test_migrate_introspect_oracle_live.py  test_migrate_keyset.py  test_migrate_planner.py  test_migrate_runner.py  test_migrate_sequences.py  test_migrate_verify.py  test_migration_benchmark_live.py  test_migration_checkpoint.py  test_migration_report.py  test_parser.py  test_parser_equivalence.py  test_parser_oracle.py  test_password.py  test_pdf_legacy.py  (+17 more)
apps/api/tests/fixtures/hr_schema/: hr_schema.sql
apps/api/tests/fixtures/oracle_benchmarks/: README.md
apps/api/tests/fixtures/oracle_demo/: README.md
apps/api/tests/fixtures/oracle_stress/: 01_composite_null_pk.sql  02_self_fk_unordered.sql  03_lob_heavy.sql  04_byte_vs_char_varchar2.sql  05_bfile_present.sql
apps/web/: Dockerfile.fly  fly.toml  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/analyzer/: page.tsx
apps/web/app/assess/: page.tsx  sample.ts
apps/web/app/billing/: page.tsx
apps/web/app/components/: AuthGuard.tsx  AuthInitializer.tsx  CloudOnlyNotice.tsx  CostCalculator.tsx  DatabaseConnectionForm.tsx  DiffViewer.tsx  Navigation.tsx  PermissionAuditPanel.tsx  ReportPreview.tsx  UploadZone.tsx
apps/web/app/contact/: page.tsx
apps/web/app/convert/: page.tsx
apps/web/app/converter/: page.tsx
apps/web/app/dashboard/components/: RecentJobsTable.tsx  UsageMeter.tsx
apps/web/app/download/: page.tsx
apps/web/app/features/: page.tsx
apps/web/app/lib/: api.ts  cloudRoutes.ts
apps/web/app/login/: page.tsx
apps/web/app/migration/: page.tsx
apps/web/app/migrations/[id]/: SchedulePanel.tsx  (+1 more)
apps/web/app/pricing/: page.tsx
apps/web/app/privacy/: page.tsx
apps/web/app/runbook/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/setup/: page.tsx
apps/web/app/store/: authStore.ts
apps/web/app/support/: page.tsx
apps/web/app/terms/: page.tsx
apps/web/app/troubleshoot/: page.test.tsx  page.tsx
docs/: AI_TOOLS_ANALYSIS.md  CDC_DESIGN.md  COMPETITIVE_DIFFERENTIATION_STRATEGY.md  DATABASE_CONNECTIVITY_STRATEGY.md  DATA_INTEGRITY_VALIDATION.md  DATA_MIGRATION_ORCHESTRATION.md  PERFORMANCE_BENCHMARKING_AI.md  PHASE3_1_RAG_SYSTEM.md  PHASE3_2_IMPLEMENTATION_STATUS.md  PHASE3_INTEGRATION_STRATEGY.md  TROUBLESHOOTING_AI_STRATEGY.md
scripts/: build-airgap-bundle.sh  extract-oss.py
(+6 files in other folders)
