[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depart-api"
version = "0.1.0"
description = "Depart — Migration Platform for Escaping Legacy Oracle Workloads"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "oracledb>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    "antlr4-python3-runtime>=4.13.1",
    "reportlab>=4.0.7",
    "anthropic>=0.34.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "pgvector>=0.2.4",
    "numpy>=1.24.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "stripe>=7.0.0",
    "resend>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "httpx>=0.27.0",
    "pypdf>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a running Postgres",
    "oracle: requires a running Oracle (use `make oracle-up`)",
]
