[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depart-api"
version = "0.1.0"
description = "Depart — Migration Platform for Escaping Legacy Oracle Workloads"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "oracledb>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    "antlr4-python3-runtime>=4.13.1",
    "reportlab>=4.0.7",
    "anthropic>=0.34.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "pgvector>=0.2.4",
    "numpy>=1.24.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "stripe>=7.0.0",
    "resend>=0.7.0",
    "authlib>=1.3",
    "python3-saml>=1.16",
    "arq>=0.26",
    "redis>=5",
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "httpx>=0.27.0",
    "pypdf>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Default ruleset (E, F, W) plus our additions.
# These rule families flag the things we keep (real bugs):
#   F     — pyflakes (undefined names, unused imports — F401)
#   E7,E9 — pycodestyle errors that are actual bugs
# These we ignore as deliberate choices in this codebase:
#   E402  — module-level import not at top: main.py uses conditional imports
#           for optional deps (sentence_transformers); intentional pattern.
#   E702  — multiple statements per line: hand-coded tokenizer uses `;`
#           sparingly for compactness; doesn't help readability to break.
#   E712  — comparison to True/False: clearer than `is True` in some tests.
#   E722  — bare except: pre-existing connector code intentionally
#           swallows everything around session cleanup; rewriting them is
#           a separate task.
#   E731  — lambda assignment: pre-existing factory patterns.
#   F841  — unused local: tests sometimes assign for clarity.
ignore = ["E402", "E702", "E712", "E722", "E731", "F841"]

[tool.ruff.lint.per-file-ignores]
# Tests can use star imports + unused params/fixtures freely.
"tests/**/*.py" = ["F401", "F403"]
# Vendored ANTLR base classes use `from antlr4 import *` upstream.
"src/source/oracle/grammar/PlSql*Base.py" = ["F401", "F403", "F405"]
# Generated ANTLR parser code (when present) is not for human consumption.
"src/source/oracle/_generated/**/*.py" = ["F401", "F403", "F405", "E501", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a running Postgres",
    "oracle: requires a running Oracle (use `make oracle-up`)",
]

[tool.coverage.run]
# Exclude vendored/generated code from line-tracing. The ANTLR-generated
# PlSqlParser.py is ~6.7 MB; without this exclude, `pytest --cov=src`
# spends most of its time instrumenting it and the test job hangs past
# any reasonable timeout.
omit = [
    "*/_generated/*",
    "*/grammar/PlSql*Base.py",
    "*/conftest.py",
]
